// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card basic 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-basic"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
                <button
                  className="card--toolbar-action CardToolbar__ToolbarSVGWrapper-sc-1ekh8ti-0 eapGUf"
                  onClick={[Function]}
                >
                  <svg
                    description="Expand to fullscreen"
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    title="Expand to fullscreen"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M28 4H10a2.006 2.006 0 0 0-2 2v14a2.006 2.006 0 0 0 2 2h18a2.006 2.006 0 0 0 2-2V6a2.006 2.006 0 0 0-2-2zm0 16H10V6h18z"
                    />
                    <path
                      d="M18 26H4V16h2v-2H4a2.006 2.006 0 0 0-2 2v10a2.006 2.006 0 0 0 2 2h14a2.006 2.006 0 0 0 2-2v-2h-2z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            />
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card basic with render prop 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="render-prop-basic"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card with render prop"
              >
                Card with render prop
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
                <button
                  className="card--toolbar-action CardToolbar__ToolbarSVGWrapper-sc-1ekh8ti-0 eapGUf"
                  onClick={[Function]}
                >
                  <svg
                    description="Expand to fullscreen"
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    title="Expand to fullscreen"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M28 4H10a2.006 2.006 0 0 0-2 2v14a2.006 2.006 0 0 0 2 2h18a2.006 2.006 0 0 0 2-2V6a2.006 2.006 0 0 0-2-2zm0 16H10V6h18z"
                    />
                    <path
                      d="M18 26H4V16h2v-2H4a2.006 2.006 0 0 0-2 2v10a2.006 2.006 0 0 0 2 2h14a2.006 2.006 0 0 0 2-2v-2h-2z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            >
              <p>
                Content width is 
                 and height is 
                NaN
              </p>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card error 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-error"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              />
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                Error loading data for this card:  API threw Nullpointer
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card error/small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "margin": 20,
              "width": "118px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 fRbMaq"
            id="facilitycard-error-small"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              />
            </div>
            <div
              className="Card__CardContent-v5r71h-1 bVgaXY"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                Data error.
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card implementing a custom card 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="Card__CardWrapper-v5r71h-0 SZEPp"
          id="mycard"
          values={
            Array [
              Object {
                "timestamp": 12341231231,
                "value1": "my value",
              },
            ]
          }
        >
          <div
            className="Card__CardContent-v5r71h-1 coBfbV"
          >
            <div
              className="Table__StyledTableContainer-sc-1kalfns-0 buETAI bx--data-table-container"
            >
              <section
                aria-label="data table toolbar"
                className="bx--table-toolbar"
              >
                <div
                  className="bx--batch-actions TableToolbar__StyledTableBatchActions-sc-17lb3av-3 gnkbSD"
                >
                  <div
                    className="bx--action-list"
                  >
                    <button
                      className="bx--batch-summary__cancel bx--btn bx--btn--primary"
                      disabled={false}
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                  <div
                    className="bx--batch-summary"
                  >
                    <p
                      className="bx--batch-summary__para"
                    >
                      <span>
                        0 item selected
                      </span>
                    </p>
                  </div>
                </div>
                <label
                  className="table-toolbar-secondary-title"
                >
                  Card Title
                </label>
                <div
                  className="bx--toolbar-content TableToolbar__StyledTableToolbarContent-sc-17lb3av-2 ksiTUe"
                >
                  <div
                    className="card--toolbar"
                  >
                    <div
                      className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup={true}
                        aria-label="Menu"
                        className="card--toolbar-action bx--overflow-menu"
                        onClick={[Function]}
                        onClose={[Function]}
                        onKeyDown={[Function]}
                        open={false}
                        tabIndex={0}
                        title="Open and close list of options"
                      >
                        <svg
                          aria-label="open and close list of options"
                          className="bx--overflow-menu__icon"
                          focusable="false"
                          height={20}
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          style={
                            Object {
                              "willChange": "transform",
                            }
                          }
                          viewBox="0 0 32 32"
                          width={20}
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                          />
                          <path
                            d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                          />
                          <path
                            d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                          />
                          <title>
                            open and close list of options
                          </title>
                        </svg>
                      </button>
                    </div>
                    <button
                      className="card--toolbar-action CardToolbar__ToolbarSVGWrapper-sc-1ekh8ti-0 eapGUf"
                      onClick={[Function]}
                    >
                      <svg
                        description="Expand to fullscreen"
                        focusable="false"
                        height={20}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        title="Expand to fullscreen"
                        viewBox="0 0 32 32"
                        width={20}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M28 4H10a2.006 2.006 0 0 0-2 2v14a2.006 2.006 0 0 0 2 2h18a2.006 2.006 0 0 0 2-2V6a2.006 2.006 0 0 0-2-2zm0 16H10V6h18z"
                        />
                        <path
                          d="M18 26H4V16h2v-2H4a2.006 2.006 0 0 0-2 2v10a2.006 2.006 0 0 0 2 2h14a2.006 2.006 0 0 0 2-2v-2h-2z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </section>
              <div
                className="addons-iot-table-container"
              >
                <table
                  className="bx--data-table bx--data-table--no-border"
                  title={null}
                >
                  <thead
                    className="TableHead__StyledCarbonTableHead-sc-1fviaow-1 jDaLBC"
                  >
                    <tr>
                      <th
                        align="start"
                        className="table-header-label-start TableHead__StyledCustomTableHeader-sc-1fviaow-2 dSXhWB"
                        data-column="value1"
                        id="column-value1"
                        scope="col"
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          <span
                            title="String"
                          >
                            String
                          </span>
                        </span>
                      </th>
                      <th
                        align="start"
                        className="table-header-label-start TableHead__StyledCustomTableHeader-sc-1fviaow-2 dSXhWB"
                        data-column="timestamp"
                        id="column-timestamp"
                        scope="col"
                      >
                        <span
                          className="bx--table-header-label"
                        >
                          <span
                            title="Date"
                          >
                            Date
                          </span>
                        </span>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    aria-live="polite"
                  >
                    <tr
                      className="TableBodyRow__StyledTableRow-sc-103itxu-0 hdodpz"
                      onClick={[Function]}
                    >
                      <td
                        align="start"
                        className="data-table-start TableBodyRow__StyledTableCellRow-sc-103itxu-5 jsPLxS"
                        data-column="value1"
                        data-offset={0}
                        id="cell-my table-rowid-0-value1"
                        offset={0}
                      >
                        <span
                          className="TableBodyRow__StyledNestedSpan-sc-103itxu-6 NDiCc"
                        >
                          <span
                            title="my value"
                          >
                            my value
                          </span>
                        </span>
                      </td>
                      <td
                        align="start"
                        className="data-table-start TableBodyRow__StyledTableCellRow-sc-103itxu-5 jsPLxS"
                        data-column="timestamp"
                        data-offset={0}
                        id="cell-my table-rowid-0-timestamp"
                        offset={0}
                      >
                        <span
                          className="TableBodyRow__StyledNestedSpan-sc-103itxu-6 NDiCc"
                        >
                          <span
                            title={12341231231}
                          >
                            12341231231
                          </span>
                        </span>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card is editable 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-with-loading"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={16}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="3"
                        r="1"
                      />
                      <circle
                        cx="8"
                        cy="8"
                        r="1"
                      />
                      <circle
                        cx="8"
                        cy="13"
                        r="1"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            />
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card is expandable 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-with-loading"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <button
                  className="card--toolbar-action CardToolbar__ToolbarSVGWrapper-sc-1ekh8ti-0 eapGUf"
                  onClick={[Function]}
                >
                  <svg
                    description="Expand to fullscreen"
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    title="Expand to fullscreen"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M28 4H10a2.006 2.006 0 0 0-2 2v14a2.006 2.006 0 0 0 2 2h18a2.006 2.006 0 0 0 2-2V6a2.006 2.006 0 0 0-2-2zm0 16H10V6h18z"
                    />
                    <path
                      d="M18 26H4V16h2v-2H4a2.006 2.006 0 0 0-2 2v10a2.006 2.006 0 0 0 2 2h14a2.006 2.006 0 0 0 2-2v-2h-2z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            />
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card size gallery 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h3>
          XSMALL
        </h3>
        <div
          style={
            Object {
              "margin": 20,
              "width": "118px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 fRbMaq"
            id="facilitycard-size-gallery-XSMALL"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              />
            </div>
            <div
              className="Card__CardContent-v5r71h-1 bVgaXY"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                No data
              </div>
            </div>
          </div>
        </div>
        <h3>
          XSMALLWIDE
        </h3>
        <div
          style={
            Object {
              "margin": 20,
              "width": "252px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 fRbMaq"
            id="facilitycard-size-gallery-XSMALLWIDE"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 bVgaXY"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                No data is available for this time range.
              </div>
            </div>
          </div>
        </div>
        <h3>
          SMALL
        </h3>
        <div
          style={
            Object {
              "margin": 20,
              "width": "252px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-size-gallery-SMALL"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                No data is available for this time range.
              </div>
            </div>
          </div>
        </div>
        <h3>
          TALL
        </h3>
        <div
          style={
            Object {
              "margin": 20,
              "width": "252px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 isJwXL"
            id="facilitycard-size-gallery-TALL"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 hUPzK"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                No data is available for this time range.
              </div>
            </div>
          </div>
        </div>
        <h3>
          MEDIUM
        </h3>
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-size-gallery-MEDIUM"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                No data is available for this time range.
              </div>
            </div>
          </div>
        </div>
        <h3>
          WIDE
        </h3>
        <div
          style={
            Object {
              "margin": 20,
              "width": "788px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-size-gallery-WIDE"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                No data is available for this time range.
              </div>
            </div>
          </div>
        </div>
        <h3>
          LARGE
        </h3>
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 isJwXL"
            id="facilitycard-size-gallery-LARGE"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 hUPzK"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                No data is available for this time range.
              </div>
            </div>
          </div>
        </div>
        <h3>
          XLARGE
        </h3>
        <div
          style={
            Object {
              "margin": 20,
              "width": "1056px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 isJwXL"
            id="facilitycard-size-gallery-XLARGE"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 hUPzK"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                No data is available for this time range.
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card with empty state 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-empty"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            >
              <div
                className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
              >
                No data is available for this time range.
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card with loading 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-with-loading"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              />
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            >
              <div
                className="Card__SkeletonWrapper-v5r71h-2 fqjitN"
              >
                <div>
                  <p
                    className="bx--skeleton__text"
                    style={
                      Object {
                        "width": "calc(100% - 73px)",
                      }
                    }
                  />
                  <p
                    className="bx--skeleton__text"
                    style={
                      Object {
                        "width": "calc(100% - 11px)",
                      }
                    }
                  />
                  <p
                    className="bx--skeleton__text"
                    style={
                      Object {
                        "width": "calc(100% - 43px)",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Card with range selector 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="storybook-container"
      style={
        Object {
          "padding": "3rem",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          style={
            Object {
              "margin": 20,
              "width": "520px",
            }
          }
        >
          <div
            className="Card__CardWrapper-v5r71h-0 SZEPp"
            id="facilitycard-with-loading"
          >
            <div
              className="card--header"
            >
              <span
                className="card--title"
                title="Card Title"
              >
                Card Title
                 
              </span>
              <div
                className="card--toolbar"
              >
                <div
                  className="CardToolbar__ToolbarDateRangeWrapper-sc-1ekh8ti-1 eWLmmw"
                >
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    aria-label="Menu"
                    className="card--toolbar-action bx--overflow-menu"
                    onClick={[Function]}
                    onClose={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    tabIndex={0}
                    title="Open and close list of options"
                  >
                    <svg
                      aria-label="open and close list of options"
                      className="bx--overflow-menu__icon"
                      focusable="false"
                      height={20}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M21 30a8 8 0 1 1 8-8 8 8 0 0 1-8 8zm0-14a6 6 0 1 0 6 6 6 6 0 0 0-6-6z"
                      />
                      <path
                        d="M22.59 25L20 22.41V18h2v3.59l2 2L22.59 25z"
                      />
                      <path
                        d="M28 6a2 2 0 0 0-2-2h-4V2h-2v2h-8V2h-2v2H6a2 2 0 0 0-2 2v20a2 2 0 0 0 2 2h4v-2H6V6h4v2h2V6h8v2h2V6h4v6h2z"
                      />
                      <title>
                        open and close list of options
                      </title>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="Card__CardContent-v5r71h-1 coBfbV"
            />
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;
